# GlobalTelco

./: .dockerignore  .env.example  .gitignore  .mcp.json  ADMIN_OVERHAUL_PLAN.md  AUDIT.md  CHANGELOG-admin.md  CHANGELOG-desktop.md  CHANGELOG-server.md  CHANGELOG-web.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FULL_AUDIT_REPORT.md  FULL_FIX_PLAN.md  FULL_GAME_AUDIT.md  GEMINI.md  GlobalTelco.uproject  INFRA_AUDIT_REPORT.md  INSTANT_MULTIPLAYER_PLAN.md  LICENSE  MAP_TERRAIN_FIBER_OVERHAUL_PLAN.md  PERFORMANCE_PLAN.md  PLAN.md  QWEN.md  README.md  SATELLITE_PLAN.md  SYSTEMS_AND_FEATURES_AUDIT.md  fly.toml  package-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  desktop-release.yml  release.yml
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Docs/: INSTANT_MULTIPLAYER_PLAN_ARCHIVED.md  MAP_TERRAIN_FIBER_OVERHAUL_PLAN.md  PERFORMANCE_AUDIT.md  PERFORMANCE_OVERHAUL_PLAN.md  SECURITY.md  game_design_decisions.md  global_telecom_infrastructure_mmo_project_design_document.md  mvp_to_production_v1_plan.md  offline_singleplayer_implementation_plan.md  technical_architecture.md  telecom_mmo_ai_dev_docs.md  telecom_mmo_economic_corporate_simulation.md  telecom_mmo_infrastructure_simulation.md  telecom_mmo_master_dev_charter.md  telecom_mmo_multiplayer_governance_simulation.md
Source/: GlobalTelco.Target.cs  GlobalTelcoEditor.Target.cs  GlobalTelcoServer.Target.cs
Source/GTCore/: GTCore.Build.cs  GTCoreModule.cpp  GTCoreModule.h
Source/GTCore/Private/: GTAIArchetype.cpp  GTEventQueue.cpp  GTGeoCoordinates.cpp  GTGeodesicGrid.cpp  GTHexGrid.cpp  GTSimulationSubsystem.cpp  (+1 more)
Source/GTEconomy/: GTEconomy.Build.cs  GTEconomyModule.cpp  GTEconomyModule.h
Source/GTFrontend/: GTFrontend.Build.cs  GTFrontendModule.cpp  GTFrontendModule.h
Source/GTInfrastructure/: GTInfrastructure.Build.cs  GTInfrastructureModule.cpp  GTInfrastructureModule.h
Source/GTMultiplayer/: GTMultiplayer.Build.cs  GTMultiplayerModule.cpp  GTMultiplayerModule.h
Source/GlobalTelco/: GlobalTelco.Build.cs  GlobalTelcoModule.cpp
admin/: package.json  svelte.config.js  tsconfig.json  vite.config.ts
admin/src/: app.css  app.d.ts  app.html
crates/gt-ai/: Cargo.toml
crates/gt-bridge/: Cargo.toml
crates/gt-common/: Cargo.toml
crates/gt-common/src/: commands.rs  config.rs  events.rs  geo.rs  lib.rs  protocol.rs  serde_helpers.rs  types.rs
crates/gt-common/src/types/: config.rs  edge.rs  mod.rs  network.rs  node.rs  satellite.rs  spectrum.rs  terrain.rs
crates/gt-economy/: Cargo.toml
crates/gt-infrastructure/: Cargo.toml
crates/gt-population/: Cargo.toml
crates/gt-server/: Cargo.toml  Dockerfile  docker-compose.yml
crates/gt-server/migrations/: 001_initial_schema.sql  002_multiplayer_overhaul.sql  003_r2_storage.sql  004_chat_messages.sql
crates/gt-server/src/: auth.rs  config.rs  db.rs  main.rs  oauth.rs  r2.rs  routes.rs  state.rs  tick.rs  ws.rs
crates/gt-server/src/db/: accounts.rs  auth.rs  chat.rs  leaderboard.rs  mod.rs  moderation.rs  saves.rs  social.rs  worlds.rs
crates/gt-server/src/routes/: admin.rs  auth.rs  mod.rs  profile.rs  saves.rs  social.rs  worlds.rs
crates/gt-server/src/routes/admin/: mod.rs  monitoring.rs  players.rs  worlds.rs
crates/gt-server/src/ws/: chat.rs  commands.rs  filtering.rs  handler.rs  mod.rs  rate_limit.rs  sync.rs  validation.rs
crates/gt-simulation/: Cargo.toml
crates/gt-simulation/benches/: tick_benchmark.rs
crates/gt-simulation/src/: events.rs  lib.rs  world.rs
crates/gt-simulation/src/components/: achievements.rs  acquisition.rs  ai_state.rs  alliance.rs  auction.rs  building.rs  capacity.rs  city.rs  construction.rs  contract.rs  corporation.rs  covert_ops.rs  debt_instrument.rs  demand.rs  financial.rs  grant.rs  health.rs  infra_edge.rs  infra_node.rs  land_parcel.rs  lawsuit.rs  lobbying.rs  maintenance_priority.rs  mod.rs  ownership.rs  patent.rs  policy.rs  population.rs  position.rs  pricing.rs  region.rs  road_graph.rs  satellite.rs  spectrum.rs  stock_market.rs  tech_research.rs  victory.rs  weather.rs  workforce.rs
crates/gt-simulation/src/systems/: achievement.rs  ai.rs  alliance.rs  auction.rs  construction.rs  contract.rs  cost.rs  coverage.rs  covert_ops.rs  debris.rs  demand.rs  disaster.rs  finance.rs  ftth.rs  grants.rs  launch.rs  legal.rs  lobbying.rs  maintenance.rs  manufacturing.rs  market.rs  mod.rs  orbital.rs  patent.rs  population.rs  regulation.rs  research.rs  revenue.rs  routing.rs  satellite_network.rs  satellite_revenue.rs  servicing.rs  spectrum.rs  stock_market.rs  terminal_distribution.rs  utilization.rs  weather.rs
crates/gt-simulation/src/systems/ai/: building.rs  contracts.rs  diplomacy.rs  finance.rs  helpers.rs  mod.rs  satellite.rs
crates/gt-simulation/src/world/: commands_finance.rs  commands_infra.rs  commands_ip.rs  commands_ops.rs  commands_social.rs  commands_spectrum.rs  generation.rs  mod.rs  queries.rs  serialization.rs  tests.rs  utils.rs
crates/gt-simulation/tests/: determinism.rs  phase2_integration.rs
crates/gt-tauri/: Cargo.toml
crates/gt-tauri/src/: binary.rs  bridge_impl.rs  lib.rs  queries.rs  sim_thread.rs
crates/gt-wasm/: Cargo.toml
crates/gt-wasm/src/: bridge_impl.rs  lib.rs  queries.rs  typed_arrays.rs
crates/gt-world/: Cargo.toml
data/: earth.json
deploy/: ORACLE_SETUP.md  deploy.sh  gt-server.service  nginx-pre-ssl.conf  nginx.conf
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs  sim_state.rs
desktop/src-tauri/src/commands/: binary.rs  filesystem.rs  lifecycle.rs  mod.rs  queries.rs  world_gen.rs
scripts/: deploy.sh  release.ts
tools/gt/: go.mod
web/: build_error.txt  package-lock.json  package.json  svelte.config.js  vercel.json  vite.config.ts
web/scripts/: vercel-install.sh
web/src/: app.css  app.d.ts  app.html  service-worker.ts
web/static/: countries-110m.json  manifest.json
(+345 files in other folders)
