[workspace]
resolver = "2"
members = [
    "crates/gt-common",
    "crates/gt-simulation",
    "crates/gt-world",
    "crates/gt-economy",
    "crates/gt-infrastructure",
    "crates/gt-population",
    "crates/gt-ai",
    "crates/gt-bridge",
    "crates/gt-wasm",
    "crates/gt-tauri",
    "crates/gt-server",
]
exclude = [
    "desktop/src-tauri",
]

[workspace.package]
version = "1.11.0"
edition = "2021"
license = "LicenseRef-GlobalTelco"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
thiserror = "2"
noise = "0.9"
uuid = { version = "1", features = ["v4", "serde", "js"] }
rmp-serde = "1"
chrono = { version = "0.4", features = ["serde"] }
bincode = "1"
zstd = "0.13"
crc32fast = "1"

[profile.release]
opt-level = 's'
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
