[package]
name = "gt-server"
version = "0.8.0"
edition.workspace = true

[[bin]]
name = "gt-server"
path = "src/main.rs"

[dependencies]
gt-common = { path = "../gt-common" }
gt-simulation = { path = "../gt-simulation" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rmp-serde = { workspace = true }
bincode = { workspace = true }
zstd = { workspace = true }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9"
argon2 = "0.5"
dashmap = "6"
futures = "0.3"
tokio-stream = "0.1"
subtle = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"], optional = true }

[features]
default = []
postgres = ["sqlx"]
