[package]
name = "gt-server"
version = "0.12.0"
edition.workspace = true

[[bin]]
name = "gt-server"
path = "src/main.rs"

[dependencies]
gt-common = { path = "../gt-common" }
gt-simulation = { path = "../gt-simulation" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rmp-serde = { workspace = true }
bincode = { workspace = true }
zstd = { workspace = true }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9"
argon2 = "0.5"
dashmap = "6"
futures = "0.3"
tokio-stream = "0.1"
subtle = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
rand = "0.9"
sha2 = "0.10"
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-rustls-tls"], optional = true }

# WebTransport support (Phase 7 — optional, requires TLS certs)
wtransport = { version = "0.5", optional = true }

[features]
default = ["postgres", "oauth", "r2"]
postgres = ["sqlx"]
oauth = ["reqwest"]
r2 = ["rust-s3"]
webtransport = ["wtransport"]
