[package]
name = "gt-simulation"
version.workspace = true
edition.workspace = true

[features]
default = ["native-compression"]
native-compression = ["zstd", "crc32fast"]

[dependencies]
gt-common = { path = "../gt-common" }
gt-world = { path = "../gt-world" }
gt-economy = { path = "../gt-economy" }
gt-infrastructure = { path = "../gt-infrastructure" }
gt-population = { path = "../gt-population" }
gt-ai = { path = "../gt-ai" }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
bincode = { workspace = true }
zstd = { workspace = true, optional = true }
crc32fast = { workspace = true, optional = true }
rstar = "0.12.2"

[dev-dependencies]
criterion = "0.5"
sha2 = "0.10"

[[bench]]
name = "tick_benchmark"
harness = false
