[package]
name = "gt-tauri"
version.workspace = true
edition.workspace = true

[dependencies]
gt-common = { path = "../gt-common" }
gt-bridge = { path = "../gt-bridge" }
gt-simulation = { path = "../gt-simulation" }
gt-world = { path = "../gt-world" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt"] }
