[package]
name = "gt-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gt-common = { path = "../gt-common" }
gt-bridge = { path = "../gt-bridge" }
gt-simulation = { path = "../gt-simulation", default-features = false }
gt-world = { path = "../gt-world" }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
