[package]
name = "gt-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Enable WASM threads via wasm-bindgen-rayon. Requires nightly Rust,
# RUSTFLAGS="-C target-feature=+atomics,+bulk-memory,+mutable-globals,+simd128",
# and COOP/COEP headers on the hosting page.
threads = ["rayon", "wasm-bindgen-rayon"]

[dependencies]
gt-common = { path = "../gt-common" }
gt-bridge = { path = "../gt-bridge" }
gt-simulation = { path = "../gt-simulation", default-features = false }
gt-world = { path = "../gt-world" }
serde = { workspace = true }
serde_json = { workspace = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
talc = { version = "4", default-features = false, features = ["lock_api"] }
rayon = { version = "1", optional = true }
wasm-bindgen-rayon = { version = "1", optional = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-simd", "--enable-bulk-memory", "--enable-mutable-globals", "--enable-nontrapping-float-to-int", "--enable-sign-ext"]
