[package]
name = "globaltelco-desktop"
version = "2.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gt-tauri = { path = "../../crates/gt-tauri" }
gt-bridge = { path = "../../crates/gt-bridge" }
gt-common = { path = "../../crates/gt-common" }

[features]
custom-protocol = ["tauri/custom-protocol"]
